--- a/package.json
+++ b/package.json
@@ -14,10 +14,21 @@
       "optional": true
     }
   },
+  "keywords": [
+    "style guide",
+    "lint",
+    "javascript"
+  ],
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react": "^7.33.2"
+    "eslint": "^8.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-tailwindcss": "^3.14.0",
+    "prettier": "^3.2.2"
   }
 }
